# iqrah-mobile

./: .gitignore  .gitmodules  2.9_final_validation.md  2.x_evolution.md  AGENTS.md  API_MIGRATION_CHECKLIST.md  BACKEND_FRONTEND_GAP_ANALYSIS.md  BUILDING.md  CLAUDE.md  EXERCISES_MASTER_PLAN.md  FLUTTER_INTEGRATION_GUIDE.md  HANDOVER_TASK_1.5.md  IMPLEMENTATION_SUMMARY.md  PHASE_2_STATUS.md  README.md  RUST_CODEBASE_ANALYSIS.md  SPRINT_7_FIX_PLAN.md  SPRINT_7_GAPS.md  SPRINT_8_BRIEF.md  START_HERE.md  cargokit.yaml  flutter_rust_bridge.yaml  graph_generation_optimization_prompt.md  justfile  pubspec.yaml
backend/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs
backend/crates/api/tests/: admin_packs.rs  api_integration_tests.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: auth.rs  errors.rs  lib.rs  sync.rs
backend/crates/storage/: Cargo.toml  README.md
backend/crates/storage/migrations_sqlite/: 0001_initial.sql
backend/crates/storage/src/: error.rs  lib.rs  pack_repository.rs  sync_repository.rs  user_repository.rs
backend/crates/storage/tests/: integration_sqlite_tests.rs  pack_manifest_repository_tests.rs  (+3 more)
backend/migrations/: 20260102000000_initial_schema.sql  20260102000001_pack_versions.sql  20260102000002_auth_sync.sql  20260103000000_device_metadata.sql  20260219000000_session_items_sync_index.sql  20260219000001_deprecate_legacy_pack_columns.sql  20260220000000_sync_audit_tables.sql
research_and_dev/iqrah-audio/: .gitignore  CLAUDE.md  DEMO_GUIDE.md  EXECUTIVE_SUMMARY.md  FIXES_NEEDED.md  IMPROVEMENTS.md  IMPROVEMENTS_README.md  M3_M4_TIER1_COMPLETE.md  M3_REWORK_SUMMARY.md  M3_SUCCESS_SUMMARY.md  M4_TIER2_SESSION_COMPLETE.md  MADD_TIER2_COMPLETE.md  MUAALEM_INTEGRATION_DELTAS.md  MVP_IMPLEMENTATION_SUMMARY.md  PATH_A_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_SESSION_SUMMARY.md  PHASE2_VALIDATORS_STATUS.md  QUICKSTART_M3_M4.md  QUICK_START_IMPROVEMENTS.md  README.md  SESSION_SUMMARY_M3_M4_COMPLETE.md  SOTA_IMPROVEMENTS_SUMMARY.md  TEST_RESULTS.md  UI_GUIDE.md  app.py  app_qari.py  app_qari_final.py  app_qari_v2.py  debug_v4.py  demo_realtime.py  design-idea.md  download_phase2_test_audio.py  explore_husary_audio.py  explore_tajweed_annotations.py  get_uthmani_text.py  pyproject.toml  requirements-web.txt  requirements.txt  test_dtw_alignment.py  (+5 more)
research_and_dev/iqrah-audio/archive/: ARCHITECTURE.md  INSTALLATION.md  PROJECT_SUMMARY.md  README.md  app_qari_final.py  requirements.txt  test_pronunciation_final_validation.py  test_user_recitation.py  test_visualization_system.py  test_word_ui.sh
research_and_dev/iqrah-audio/benchmarks/: accuracy_benchmark.py  performance_benchmark.py
research_and_dev/iqrah-audio/data/: indopak.json
research_and_dev/iqrah-audio/doc/: NAVIGATION.md  README.md
research_and_dev/iqrah-audio/docs/: CTC_FINETUNING_PLAN.md  FINAL_IMPROVEMENTS_2025-10-05.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  ML_ALIGNMENT_PLAN.md  OPTION_C_COMPLETE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE_0_COMPLETE.md  PHASE_1_STATUS.md  PITCH_VISUALIZATION.md  PRODUCTION_READY.md  PROGRESS_REPORT.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-10-05.md  SWIFTF0_MIGRATION.md  UI_IMPROVEMENTS_2025-10-05.md  V2_IMPROVEMENTS.md  V2_PRODUCTION_READY.md  WEB_UI_IMPROVEMENTS.md  comparison-api.md  quickstart-comparison.md  session-summary-phase2.md  ui-comparison-guide.md
research_and_dev/iqrah-audio/examples/: demo.py  demo_complete_m3_m4_tier1_tier2.py  demo_integrated_m3_m4.py  demo_m3_output.json  demo_m3_pipeline.py  demo_m4_tier1.py  demo_madd_tier2.py  demo_mvp.py  demo_phase2_ghunnah_qalqalah.py
research_and_dev/iqrah-audio/reports/: correction-swift-f0-and-phoneme-alignement.md  ctc_vs_dtw_benchmark.md  sota-audio-recitation-comparison.md
research_and_dev/iqrah-audio/static/: app.js  compare_user.html  comparison_visualize.html  index.html  qari.html  qari_final.html  qari_final.html.backup
research_and_dev/iqrah-audio/test_results/: results_20251006_123419.json  results_20251006_125310.json  results_20251006_125353.json  results_20251006_131356.json
research_and_dev/iqrah-audio/tests/: run_all_tests.py  test_anchors.py  test_basic.py  test_ctc_align.py  test_feedback.py  test_gate.py  test_llr.py  test_m3_integration.py  test_madd_validator.py  test_mms_fa_pipeline.py  test_normalization.py  test_offline_pipeline.py  test_oltw.py  test_online_dtw.py  test_phase2_validators.py  test_pipeline.py  test_pitch_optimization.py  test_tajweed_mvp.py
research_and_dev/iqrah-audio/validation/: README.md  __init__.py  results.json  run_validation.py
rust/: Cargo.toml  Cargo.toml.old  content_test.db  fix_test_mocks.fish  results.json  results_debug.json  results_fixed.json  results_fixed_debug.json  results_v2.json  results_v2_debug.json  results_v3_debug.json  results_v4_debug.json  test_output.txt
rust/.sqlx/: prepare.db
rust/archive/: cbor_import.rs  database.rs  sqlite_repo.rs
rust/archive/api/: mod.rs  simple.rs  types.rs
rust/crates/: content_test.db
rust/crates/iqrah-api/: Cargo.toml  cargokit.yaml
rust/crates/iqrah-cli/: Cargo.toml  README.md
rust/crates/iqrah-core/: Cargo.toml
rust/crates/iqrah-gen/: Cargo.toml
rust/crates/iqrah-iss/: CHANGELOG.md  Cargo.toml  README.md
rust/crates/iqrah-server/: Cargo.toml  README.md
rust/crates/iqrah-storage/: Cargo.toml
rust/scripts/: sqlx_prepare_workspace.sh  verify_knowledge_axis.sh
rust/src/: app.rs  database.rs  exercises.rs  frb_generated.rs  lib.rs  propagation.rs  repository.rs  repository.rs.old  sqlite_repo.rs
rust/src/api/: mod.rs  mod.rs.old  simple.rs
rust/tests/: exercise_v2_integration_tests.rs  import_test.rs  knowledge_axis_test.rs  package_test.rs  propagation_tests.rs  semantic_grading_integration_test.rs  translator_import_test.rs
rust/tests/common/: mod.rs
rust/tests/headless/: test_echo_recall_advanced.sh  test_mcq_flow.sh  test_memorization_mvp.sh
(+991 files in other folders)
