[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/domain",
    "crates/storage",
    "crates/config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Iqrah Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tower_governor = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
dotenvy = "0.15"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
validator = { version = "0.18", features = ["derive"] }
