[workspace]
members = [
    "crates/iqrah-core",
    "crates/iqrah-storage",
    "crates/iqrah-api",
    "crates/iqrah-cli",
]
resolver = "2"

[package]
name = "rust_lib_iqrah"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
iqrah-api = { path = "crates/iqrah-api" }
flutter_rust_bridge = "=2.11.1"
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Shared workspace dependencies
[workspace.dependencies]
# Error handling
anyhow = "1.0.99"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }

# Traits
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Global state
once_cell = "1.21"
