[workspace]
members = [
    "crates/iqrah-core",
    "crates/iqrah-storage",
    "crates/iqrah-api",
    "crates/iqrah-cli",
]
resolver = "2"

# Shared workspace dependencies
[workspace.dependencies]
# Error handling
anyhow = "1.0.99"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
rusqlite = { version = "0.32", features = ["bundled"] }  # Bundled to avoid conflict with sqlx

# Traits
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Global state
once_cell = "1.21"
