[workspace]
members = [
    "crates/iqrah-core",
    "crates/iqrah-storage",
    "crates/iqrah-api",
    "crates/iqrah-cli",
    "crates/iqrah-server",
    "crates/iqrah-gen",
    "crates/iqrah-iss",
]

resolver = "2"

# Shared workspace dependencies
[workspace.dependencies]
# Error handling
anyhow = "1.0.99"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
    "migrate",
] }

# Traits
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Global state
once_cell = "1.21"

