[package]
name = "iqrah-backend-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "iqrah-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
validator = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
jsonwebtoken = "9"
google-jwt-verify = "0.3.0"
sha2 = "0.10"
dashmap = "6"
kameo = "0.19"

iqrah-backend-config = { path = "../config" }
iqrah-backend-domain = { path = "../domain" }
iqrah-backend-storage = { path = "../storage" }

[dev-dependencies]
tempfile = "3"

[features]
postgres-tests = []
