[package]
name = "iqrah-backend-storage"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
iqrah-backend-domain = { path = "../domain" }

[features]
postgres-tests = []
