[package]
name = "iqrah-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# FSRS algorithm
fsrs = "5.1.0"

[dev-dependencies]
mockall = "0.13"
proptest = "1.0"
tokio-test = "0.4"
rstest = "0.23"
