[package]
name = "iqrah-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

# FSRS algorithm
fsrs = "5.1.0"

# Semantic similarity grading
model2vec-rs = "0.1.4"
once_cell = "1.20"

# CBOR import
ciborium = "0.2"
zstd = "0.13"
serde_path_to_error = "0.1"

# Package management
reqwest = "0.12"
sha2 = "0.10"
sqlx = { workspace = true }

[dev-dependencies]
mockall = "0.13"
proptest = "1.0"
tokio = { workspace = true }
tokio-test = "0.4"
rstest = "0.23"
