[package]
name = "iqrah-iss"
version = "0.1.0"
edition = "2021"
description = "Iqrah Student Simulations - Scheduler evaluation framework"

[dependencies]
# Internal crates
iqrah-core = { path = "../iqrah-core" }
iqrah-storage = { path = "../iqrah-storage" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Parallelization
rayon = "1.10"

# Date/time
chrono = "0.4"

# Serialization
serde = { workspace = true }
serde_yaml = "0.9"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization (for JSON output)
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Progress reporting
indicatif = "0.17"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
# Enable testing feature in iqrah-core for MockContentRepository
iqrah-core = { path = "../iqrah-core", features = ["testing"] }

[[bin]]
name = "iqrah-iss"
path = "src/main.rs"
