[package]
name = "iqrah-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
iqrah-core = { path = "../iqrah-core" }

sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }  # For migration tool only

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.23"
tempfile = "3.14"
